# changelog-summarizer

./: README.md  changelog.txt  output.txt  pyproject.toml
src/: main.py
